kube/deployment-local-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  labels:
    app: notes-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: notes-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notes-service-v1
spec:
  replicas: 1  
  template:
    metadata:
      labels:
        app: notes-service
        version: v1
    spec:
      containers:
        - name: app
          image: gcr.io/mtech-wms-backstage-poc/notes-service:0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
