kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  labels:
    app: notes-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: notes-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notes-service-v1
spec:
  replicas: 1  
  template:
    metadata:
      labels:
        app: notes-service
        version: v1
    spec:
      containers:
        - name: app
          image: gcr.io/mtech-wms-backstage-poc/notes-service:0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=mtech-wms-backstage-poc:us-east4:backstage-db-1=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
---
