kube/notes-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: notes-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notes-service
spec:
  hosts:
  - "*"
  gateways:
  - notes-service-gateway
  http:
  - match:
    - uri:
        exact: /notes/api
    - uri:
        prefix: /notes    
    route:
    - destination:
        host: notes-service
