kube/notes-service-internal.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notes-service-internal
spec:
  hosts:
  - notes-service
  http:
  - match:
    - uri:
        exact: /notes/api
    - uri:
        prefix: /notes    
    route:
    - destination:
        host: notes-service
